Change some unchanged font

--- a/src/styles/config.less
+++ b/src/styles/config.less
@@ -16,8 +16,8 @@
 @progress-bg:    @blue;
 
 // Typography
-@font-family-base: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-@font-family-mono: "Droid Sans Mono", monospace;
+@font-family-base: "Gothic A1", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-mono: "Nanum Gothic Coding", monospace;
 
 @headings-font-family:    @font-family-base;
 @headings-font-weight:    100;
