--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -267,7 +267,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Gothic A1", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #3b3b3b;
@@ -364,7 +364,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Gothic A1", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 100;
   line-height: 1.1;
   color: inherit;
@@ -6030,7 +6030,7 @@ body {
 }
 #navigation h1 {
   text-align: center;
-  font-family: "Droid Sans Mono", monospace;
+  font-family: "Nanum Gothic Coding", monospace;
   margin-bottom: 15px;
   color: #36535a;
   font-size: 35px;
@@ -6148,7 +6148,7 @@ a:hover {
   word-wrap: break-word;
   font-size: 12px;
   padding: 25px 0 0 10px;
-  font-family: "Droid Sans Mono", monospace;
+  font-family: "Nanum Gothic Coding", monospace;
   text-align: left;
   color: #fff;
   -webkit-transition: all 0.3s ease;
@@ -6168,7 +6168,7 @@ a:hover {
 }
 #web code,
 .terminal code {
-  font-family: "Droid Sans Mono", monospace;
+  font-family: "Nanum Gothic Coding", monospace;
 }
 #web .code-wrapper,
 .terminal .code-wrapper {
